dts/testData/inspections/syntax/PHandleWhitespacePath.dtsi
&{<error descr="Unexpected whitespace">   </error>/path/to/node} {
    prop = &<error descr="Unexpected whitespace">  </error>{/path/to/node};
};